chore(deps): Upgrade three.js and refine shaders
Updates the `three.js` dependency to version `0.182.0`.

Enhances the `TreeShaderMaterial` with more robust noise generation for snow, ensuring it correctly applies to surfaces facing upwards regardless of their orientation. Introduces static noise with configurable scaling for finer control over snow clump appearance.

Optimizes `Gifts.tsx` by merging geometries for the box body, reducing draw calls. Additionally, implements a `useEffect` hook in `Tree.tsx` to properly dispose of the `glowTexture`, preventing potential memory leaks.

Introduces `localStorage` persistence for decorations in `App.tsx`, saving and loading state to maintain user progress. The `snowAmount` is now static, simplifying its management and removing time-based growth.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
     "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "three": "https://aistudiocdn.com/three@^0.181.2",
+    "three/addons/": "https://aistudiocdn.com/three@^0.181.2/examples/jsm/",
     "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.25",
     "@react-three/fiber": "https://aistudiocdn.com/@react-three/fiber@^9.4.2",
     "@react-three/drei": "https://aistudiocdn.com/@react-three/drei@^10.7.7",
     "@react-three/postprocessing": "https://aistudiocdn.com/@react-three/postprocessing@^3.0.4",
     "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
-    "@react-spring/three": "https://aistudiocdn.com/@react-spring/three@^10.0.3"
+    "@react-spring/three": "https://aistudiocdn.com/@react-spring/three@^10.0.3",
+    "three/": "https://esm.sh/three@^0.182.0/"
   }
 }
 </script>
