feat: Integrate Firebase for real-time decoration persistence
Replaces local state management for decorations with Firebase Realtime Database. This enables collaborative, real-time updates for all connected users.

Introduces Firebase SDK and a helper function `addDecorationToDB` for persisting new decorations. Updates `App.tsx` to call this function instead of dispatching to local state.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
     "@react-three/postprocessing": "https://aistudiocdn.com/@react-three/postprocessing@^3.0.4",
     "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
     "@react-spring/three": "https://aistudiocdn.com/@react-spring/three@^10.0.3",
-    "three/": "https://esm.sh/three@^0.182.0/"
+    "three/": "https://esm.sh/three@^0.182.0/",
+    "firebase/app": "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js",
+    "firebase/database": "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js",
+    "firebase/": "https://esm.sh/firebase@^12.6.0/"
   }
 }
 </script>
