--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     "three/": "https://esm.sh/three@^0.182.0/",
     "firebase/app": "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js",
     "firebase/database": "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js",
-    "firebase/": "https://esm.sh/firebase@^12.6.0/"
+    "firebase/": "https://esm.sh/firebase@^12.6.0/",
+    "@google/generative-ai": "https://esm.sh/@google/generative-ai",
+    "@google/genai": "https://esm.sh/@google/genai@^1.33.0"
   }
 }
 </script>
