--- a/index.html
+++ b/index.html
@@ -18,25 +18,27 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "react/": "https://aistudiocdn.com/react@^19.2.1/",
-    "three": "https://aistudiocdn.com/three@^0.181.2",
-    "three/addons/": "https://aistudiocdn.com/three@^0.181.2/examples/jsm/",
-    "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.25",
-    "@react-three/fiber": "https://aistudiocdn.com/@react-three/fiber@^9.4.2",
-    "@react-three/drei": "https://aistudiocdn.com/@react-three/drei@^10.7.7",
-    "@react-three/postprocessing": "https://aistudiocdn.com/@react-three/postprocessing@^3.0.4",
-    "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
-    "@react-spring/three": "https://aistudiocdn.com/@react-spring/three@^10.0.3",
-    "three/": "https://esm.sh/three@^0.182.0/",
+    "react": "https://esm.sh/react@18.3.1",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
+    "react-dom": "https://esm.sh/react-dom@18.3.1",
+    "react/": "https://esm.sh/react@18.3.1/",
+    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
+    "three": "https://esm.sh/three@0.160.0",
+    "three/": "https://esm.sh/three@0.160.0/",
+    "three/addons/": "https://esm.sh/three@0.160.0/examples/jsm/",
+    "framer-motion": "https://esm.sh/framer-motion@10.16.4",
+    "@react-three/fiber": "https://esm.sh/@react-three/fiber@8.16.8?external=react,react-dom,three",
+    "@react-three/drei": "https://esm.sh/@react-three/drei@9.108.3?external=react,react-dom,three,@react-three/fiber",
+    "@react-three/postprocessing": "https://esm.sh/@react-three/postprocessing@2.16.2?external=react,react-dom,three,@react-three/fiber",
+    "uuid": "https://esm.sh/uuid@9.0.1",
+    "@react-spring/three": "https://esm.sh/@react-spring/three@9.7.3?external=react,react-dom,three,@react-three/fiber",
     "firebase/app": "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js",
     "firebase/database": "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js",
     "firebase/functions": "https://www.gstatic.com/firebasejs/10.7.1/firebase-functions.js",
-    "firebase/": "https://esm.sh/firebase@^12.6.0/",
-    "@google/generative-ai": "https://esm.sh/@google/generative-ai",
-    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
-    "firebase-functions/": "https://esm.sh/firebase-functions@^7.0.2/"
+    "firebase/": "https://esm.sh/firebase@10.7.1/",
+    "firebase-functions/": "https://esm.sh/firebase-functions@4.6.0/",
+    "@google/genai": "https://esm.sh/@google/genai@0.1.1",
+    "zustand": "https://esm.sh/zustand@4.5.0?external=react"
   }
 }
 </script>
